--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 	
-<link href="Wcss.css" rel="stylesheet">
+<link href="style.css" rel="stylesheet">
 <link href="small.ico" rel="icon">
 <meta charset="utf-8">
 	
